# seali

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: run_tests.yml
docs/: faq.md  index.md
docs/api/: ansi.md  commands.md  completions.md  help.md  subcommands.md
seali/: _ansi.py  _arguments.py  _command.py  _completions.py  _decode.py  _doc_utils.py  _group.py  _help.py
tests/: test_ansi.py  test_command.py  test_completions.py  test_decode.py  test_group.py  test_help.py
tinycli/: __init__.py  _ansi.py  _arguments.py  _command.py  _decode.py  _doc_utils.py  _group.py  _help.py
