[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
  "prek>=0.3.8",
  "pyright==1.1.405",
  "ruff==0.13.1",
  "toml-sort==0.23.1"
]
docs = [
  "hippogriffe==0.2.1",
  "griffe==1.7.3",
  "mkdocs==1.6.1",
  "mkdocs-include-exclude-files==0.1.0",
  "mkdocs-ipynb==0.1.1",
  "mkdocs-material==9.6.7",
  "mkdocstrings==0.28.3",
  "mkdocstrings-python==1.16.8",
  "pygments==2.20.0",
  "pymdown-extensions==10.21.2"
]
tests = [
  "pytest>=9.0.2"
]

[project]
authors = [{email = "contact@kidger.site", name = "Patrick Kidger"}]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Mathematics"
]
dependencies = []
description = "A tiny library for building simple CLIs."
keywords = ["cli"]
license = {file = "LICENSE"}
name = "seali"
readme = "README.md"
requires-python = ">=3.11"
urls = {repository = "https://github.com/patrick-kidger/seali"}
version = "0.2.0"

[tool.hatch.build]
include = ["seali/*"]

[tool.pyright]
include = ["seali", "tests"]

[tool.pytest.ini_options]
addopts = "-Werror"

[tool.ruff]
src = []
target-version = "py311"

[tool.ruff.lint]
fixable = ["I001", "F401", "UP"]
ignore = ["E402", "E721", "E731", "E741", "F722", "UP047"]
select = ["E", "F", "I001", "UP"]

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
"collections" = "co"
"functools" = "ft"
"itertools" = "it"

[tool.ruff.lint.isort]
combine-as-imports = true
extra-standard-library = ["typing_extensions"]
lines-after-imports = 2
order-by-type = false

[tool.uv]
default-groups = ["dev", "docs", "tests"]
